# kubeviz

./: Cargo.toml  README.md  package-lock.json  package.json
src/: App.js  index.js  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ctx.rs  main.rs
src-tauri/src/api/events/: events.proto
src-tauri/src/cloud/discovery/: mod.rs
src-tauri/src/cluster/: optimization.rs
src-tauri/src/kube/discovery/: mod.rs
src/hooks/: index.js  useAsync.js
src/kubeapi/: mod.rs
src/redux_data/: namespace.js
src/store/: store.js
src/tauri/: index.js
