[package]
name = "kubeviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.73.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
tokio = { version = "1.19.0", features = ["full"] }
kube-derive = "0.73.1"
serde = "1.0.137"
serde_json = "1.0.81"
schemars = "0.8.10"
serde_yaml = "0.8.24"
axum = "0.5.6"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]